# c-multiplatform

./: .gitignore  APPLE_COMPLIANCE.md  ARCHITECTURE.md  CMakeLists.txt  COVERAGE_PROGRESS.md  CSS_STYLE_FEATURES.md  DESIGN_PRINCIPLES.md  EXAMPLE_IDEAS.md  FUTURE.md  GOOGLE_MATERIAL_3_COMPLIANCE.md  M3_COMPATIBILITY.md  MICROSOFT_FLUENT_2_COMPLIANCE.md  MICROSOFT_FLUENT_2_METRICS_AND_FIGMA.md  MODALITY.md  README.md  USAGE.md  alpine.Dockerfile  check_cov.ps1  debian.Dockerfile  llm.txt  llms.txt  msvc2005_compat.h  skills.md  vcpkg.json
.githooks/: pre-commit
.github/workflows/: ci.yml  visual_docs.yml
cmake/: CMPPackaging.cmake  LICENSE.txt  LibCMPCConfig.cmake.in  LibM3CConfig.cmake.in  M3Packaging.cmake
cmp_demo/: CMakeLists.txt  README.md
cmp_demo/src/app/: demo_app.c  demo_app.h
cmp_demo/src/main/: main_android.c  main_cocoa.m  main_ios.m  main_linux.c  main_sdl3.c  main_web.c  main_win32.c
cmp_demo/tests/: test_app_logic.c
docs/: Doxyfile.in  package-lock.json  package.json
docs/examples/: README.md
docs/pages/: index.md  modalities.md  philosophy.md  tour.md
examples/: CMakeLists.txt  heavy_compute.c  make.bat  node_js_clone.c  resilient_actors.c
examples/apple-cupertino-ios/: CMakeLists.txt
examples/google/: CMakeLists.txt
examples/google-material-android/: CMakeLists.txt
examples/google/material-catalog/: CMakeLists.txt  MATERIAL_CATALOG_PLAN.md  README.md  convert_assets.cmd  convert_assets.ps1  generate_screenshots.ps1  update_readme.ps1
examples/google/material-catalog/include/: cmp_assets.h  material_catalog.h
examples/google/material-catalog/src/: main.c  material_catalog.c
examples/google/material-catalog/tests/: screenshot_generator.c  test_material_catalog.c
examples/kotlin-multiplatform/: CMakeLists.txt
examples/kotlin-multiplatform/starter/: CMakeLists.txt  app.c  app.h  main.c  make.bat
examples/microsoft-fluent-2/: CMakeLists.txt  app.c  app.h  main.c
examples/oauth2-gui/: CMakeLists.txt
examples/oauth2-gui/include/: oauth2_gui.h
examples/oauth2-gui/src/: main.c  oauth2_gui.c
examples/oauth2-gui/tests/: test_main.c  test_oauth2_gui.c
include/: cmp.h  cmp.hpp  cmp_ffi.h
include/cmpc/: cmp_a11y.h  cmp_anim.h  cmp_api_env.h  cmp_api_gfx.h  cmp_api_ui.h  cmp_api_ws.h  cmp_arena.h  cmp_atomic.h  cmp_audio.h  cmp_backend_android.h  cmp_backend_cocoa.h  cmp_backend_gtk4.h  cmp_backend_ios.h  cmp_backend_null.h  cmp_backend_sdl3.h  cmp_backend_web.h  cmp_backend_win32.h  cmp_camera.h  cmp_core.h  cmp_datetime.h  cmp_db.h  cmp_deadlock.h  cmp_event.h  cmp_extras.h  cmp_fiber.h  cmp_form.h  cmp_fs.h  cmp_gesture.h  cmp_http_integration.h  cmp_i18n.h  cmp_icon.h  cmp_image.h  cmp_layout.h  cmp_list.h  cmp_log.h  cmp_math.h  cmp_message.h  cmp_net.h  cmp_network.h  cmp_object.h  (+18 more)
include/cupertino/: cupertino_action_sheet.h  cupertino_activity_indicator.h  cupertino_alert.h  cupertino_blur.h  cupertino_button.h  cupertino_color.h  cupertino_date_picker.h  cupertino_detent_sheet.h  cupertino_focus_ring.h  cupertino_haptics.h  cupertino_list_section.h  cupertino_mac_sidebar.h  cupertino_mac_toolbar.h  cupertino_mac_traffic_lights.h  cupertino_menu.h  cupertino_navigation_bar.h  cupertino_picker.h  cupertino_progress_bar.h  cupertino_pull_to_refresh.h  cupertino_segmented_control.h  cupertino_shape.h  cupertino_slider.h  cupertino_stepper.h  cupertino_switch.h  cupertino_tab_bar.h  cupertino_text_field.h  cupertino_tv_card.h  cupertino_typography.h  cupertino_watch_button.h
include/f2/: f2_avatar.h  f2_badge.h  f2_button.h  f2_card.h  f2_color.h  f2_command_bar.h  f2_data_components.h  f2_dialog.h  f2_flyout.h  f2_link.h  f2_message_bar.h  f2_navigation.h  f2_progress.h  f2_searchbox.h  f2_selection.h  f2_slider.h  f2_spin_button.h  f2_text_field.h  f2_tooltip.h  f2_typography.h
include/m3/: m3_a11y.h  m3_adaptive.h  m3_anim.h  m3_api_env.h  m3_api_gfx.h  m3_api_ui.h  m3_api_ws.h  m3_app_bar.h  m3_arena.h  m3_backend_android.h  m3_backend_cocoa.h  m3_backend_gtk4.h  m3_backend_ios.h  m3_backend_null.h  m3_backend_sdl3.h  m3_backend_web.h  m3_backend_win32.h  m3_badge.h  m3_button.h  m3_camera.h  m3_card.h  m3_carousel.h  m3_chip.h  m3_color.h  m3_core.h  m3_data_table.h  m3_date_picker.h  m3_dialogs.h  m3_divider.h  (+39 more)
src/: cmp_a11y_action.c  cmp_a11y_rotor.c  cmp_a11y_theme.c  cmp_a11y_transparency.c  cmp_a11y_tree.c  cmp_android_ndk_bridge.c  cmp_android_scoped_storage.c  cmp_android_vulkan_gles.c  cmp_anim_compose.c  cmp_app_region.c  cmp_app_store_compliance.c  cmp_apple_gestures.c  cmp_aria.c  cmp_aria_live.c  cmp_aria_relations.c  cmp_auth_sec.c  cmp_background_blur.c  cmp_bezier_ease.c  cmp_borders.c  cmp_breadcrumbs.c  cmp_caret.c  cmp_carplay_specific.c  cmp_clipboard.c  cmp_code_block.c  cmp_code_block_clipboard.c  cmp_collections.c  cmp_color_picker.c  cmp_command_palette.c  cmp_complex_gesture.c  cmp_complex_gesture_hig.c  cmp_compositor_anim.c  cmp_context_menu.c  cmp_coroutine.c  cmp_csp.c  cmp_custom_chrome.c  cmp_datalist.c  cmp_date_picker.c  cmp_deep_link.c  cmp_developer_experience.c  cmp_discrete_transition.c  (+164 more)
tests/: greatest.h  test_cmp_a11y_action.c  test_cmp_a11y_rotor.c  test_cmp_a11y_transparency.c  test_cmp_a11y_tree.c  test_cmp_anim_compose.c  test_cmp_app_region.c  test_cmp_app_store_compliance.c  test_cmp_aria.c  test_cmp_aria_live.c  test_cmp_aria_relations.c  test_cmp_auth_sec.c  test_cmp_bezier_ease.c  test_cmp_borders.c  test_cmp_caret.c  test_cmp_carplay_specific.c  test_cmp_clipboard.c  test_cmp_collections.c  test_cmp_color_picker.c  test_cmp_complex_gesture.c  test_cmp_complex_gesture_hig.c  test_cmp_compositor_anim.c  test_cmp_context_menu.c  test_cmp_coroutine.c  test_cmp_csp.c  test_cmp_datalist.c  test_cmp_date_picker.c  test_cmp_deep_link.c  test_cmp_developer_experience.c  test_cmp_discrete_transition.c  test_cmp_dnd.c  test_cmp_documentation_dx.c  test_cmp_dpi.c  test_cmp_dt.c  test_cmp_dynamic_type.c  test_cmp_error.c  test_cmp_event.c  test_cmp_event_bubbling.c  test_cmp_extensions.c  test_cmp_f2_a11y.c  (+125 more)
tools/: make_badge.sh  screenshot_tool.c  update_coverage_badges.sh
(+478 files in other folders)
